-Added Config Option to disable spawning of Carcass
-Fixed a Cultivator issue in the lang file